--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -1,31 +1,64 @@
 .services-offered-container {
-    width: 100%;
-    background-color: #2eccbd;
-    padding-bottom: 1%;
+  width: 100%;
+  background-color: #2eccbd;
+  padding-bottom: 1%;
 }
 
 .services-offered-header {
-    background-color: #2eccbd;
-    text-align: center;
-    padding-top: 4%;
-    font-family: 'Satisfy', cursive;
-    font-size: 4em;
-    color: #F8F8F8;
+  background-color: #2eccbd;
+  text-align: center;
+  padding-top: 4%;
+  font-family: "Satisfy", cursive;
+  font-size: 4em;
+  color: #f8f8f8;
 }
 
 .services-offered-plan {
-    width: 65%;
+  width: 65%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.view-other-services {
+  text-align: center;
+  color: #333;
+  a {
+    text-decoration: none;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .services-offered-plan {
+    width: 95%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+  }
 }
 
-.view-other-services {
-    text-align: center;
-    color: #333;
-    a {
-        text-decoration: none;
-    }
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .services-offered-plan {
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .services-offered-plan {
+    width: 65%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 }
